@@ -24,6 +24,9 @@
 
 #ifdef _WIN32
 #include "Basics/win-utils.h"
+#ifndef ENABLE_VIRTUAL_TERMINAL_PROCESSING
+#define ENABLE_VIRTUAL_TERMINAL_PROCESSING 0x0004
+#endif
 #endif
 
 using namespace arangodb;
@@ -86,7 +89,31 @@ void ShellColorsFeature::prepare() {
 
 bool ShellColorsFeature::useColors() {
 #ifdef _WIN32
+  if (!prepareConsole()) {
+    return false;
+  }
   return terminalKnowsANSIColors();
+#else
+  return true;
+#endif
+}
+
+bool ShellColorsFeature::prepareConsole() {
+#ifdef _WIN32
+  HANDLE hStdout = GetStdHandle(STD_OUTPUT_HANDLE);
+  if (hStdout == INVALID_HANDLE_VALUE) {
+    return false;
+  }
+
+  DWORD handleMode = 0;
+  if (!GetConsoleMode(hStdout, &handleMode)) {
+    return false;
+  }
+  handleMode |= ENABLE_VIRTUAL_TERMINAL_PROCESSING;
+  if (!SetConsoleMode(hStdout, handleMode)) {
+    return false;
+  }
+  return true;
 #else
   return true;
 #endif
